phase 1 completed - @component

--- a/car-dealership-api/src/main/resources/application.properties
+++ b/car-dealership-api/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=car-dealership-api
 spring.datasource.url=jdbc:mysql://localhost:3306/car_dealership
-spring.datasource.username=Lightningmcquyen
+spring.datasource.username=root
 spring.datasource.password=YU_oppdivide!20
 spring.jpa.hibernate.ddl-auto=update
