--- a/car-dealership-api/src/main/resources/application.properties
+++ b/car-dealership-api/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=car-dealership-api
 spring.datasource.url=jdbc:mysql://localhost:3306/car_dealership
 spring.datasource.username=root
 spring.datasource.password=YU_oppdivide!20
-spring.jpa.hibernate.ddl-auto=update
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
